gitops/manifests/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:

  name: nginx
  namespace: demo

  annotations:

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

spec:

  ingressClassName: alb

  rules:

  - http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: nginx

            port:
              number: 80
